GRIFFON-447 fix min/max PermGen flags in packaging options